subdir('netmgr')

libtest_inc += include_directories('.')
libisc_inc_p += include_directories('.')
libisc_inc += include_directories('include')

libisc_src += dtrace_header.process('probes.d')
libisc_obj += dtrace_object.process('probes.d')

if get_option('locktype') == 'adaptive'
    libisc_src += files('rwlock.c')
endif

libisc_src += files(
    'ascii.c',
    'assertions.c',
    'async.c',
    'backtrace.c',
    'base32.c',
    'base64.c',
    'commandline.c',
    'condition.c',
    'counter.c',
    'crc64.c',
    'dir.c',
    'entropy.c',
    'errno.c',
    'errno2result.c',
    'error.c',
    'file.c',
    'fips.c',
    'getaddresses.c',
    'hash.c',
    'hashmap.c',
    'heap.c',
    'hex.c',
    'histo.c',
    'hmac.c',
    'ht.c',
    'httpd.c',
    'interfaceiter.c',
    'iterated_hash.c',
    'job.c',
    'lex.c',
    'lib.c',
    'log.c',
    'loop.c',
    'managers.c',
    'md.c',
    'mem.c',
    'meminfo.c',
    'mutex.c',
    'mutexblock.c',
    'net.c',
    'netaddr.c',
    'netscope.c',
    'nonce.c',
    'openssl_shim.c',
    'os.c',
    'parseint.c',
    'picohttpparser.c',
    'portset.c',
    'proxy2.c',
    'quota.c',
    'radix.c',
    'random.c',
    'ratelimiter.c',
    'regex.c',
    'region.c',
    'result.c',
    'safe.c',
    'serial.c',
    'signal.c',
    'sockaddr.c',
    'stats.c',
    'stdio.c',
    'stdtime.c',
    'string.c',
    'symtab.c',
    'syslog.c',
    'thread.c',
    'tid.c',
    'time.c',
    'timer.c',
    'tls.c',
    'tm.c',
    'url.c',
    'utf8.c',
    'uv.c',
    'work.c',
    'xml.c',
)
